# google-workspace-fast-mcp

./: .gitignore  README.md  fastmcp.json  pyproject.toml  server.py  tool_manifest_google.json
scripts/: google_workspace_stdio_bridge.mjs
