[project]
name = "google-workspace-fast-mcp"
version = "0.1.0"
description = "Native FastMCP server for Google Workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=44.0.0",
  "fastmcp>=3.1.0",
  "google-api-python-client>=2.170.0",
  "google-auth>=2.34.0"
]

[project.scripts]
google-workspace-fast-mcp = "server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
